<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2011 Marcy Gordon
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
 the License at
 
 http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations under
 the License.
-->
<resources>
    <string name="app_name">OpenTripPlanner</string>
    <string name="choose_mode">Choose a mode to travel by</string>
    <string name="choose_optimization">Choose an optimization</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disable_gps">Disable GPS</string>
    <string name="no_gps_signal">Sorry, no GPS signal detected</string>
    <string name="my_location">My Location</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="server_info">Server Info</string>
    <string name="exit">Exit</string>
    <string name="wheelchair_accessible">Wheelchair Accessible</string>
    <string name="wheelchair_accessibility_description">Request wheelchair accessible routes</string>
    <string name="maximum_walk">Maximum Walk</string>
    <string name="maximum_walk_description">Maximum walking distance in meters</string>
    <string name="routing_options">Routing Options</string>
    <string name="map_options">Map Options</string>
    <string name="map_tile_provider">Map Tile Provider</string>
    <string name="custom_server_url">Custom Server URL</string>
    <string name="custom_server_url_description">"Full URL to an OpenTripPlanner server API's plan method to use for routing"</string>
    <string name="auto_detect_server">Auto Detect OTP Server</string>
    <string name="auto_detect_server_description">Automatically choose an OpenTripPlanner server based on current location</string>
    <string name="map_tile_provider_description">Choose a tile provider (Note: some may not work properly)</string>
    <string name="choose_geocoder">Select the address</string>
    <string name="geocoder_results_title">Geocoder Results</string>
    <string name="geocoder_no_results_message">Sorry, the address returns no geographical location</string>
    <string name="email_otp_android_developer">ktran9.lbs@gmail.com</string>
    <string name="feedback_android_developer">Report to OTP Android developer</string>
    <string name="refresh_server_list">Refresh server list</string>
    <string name="alternative_routes">Select a route</string>
    <string name="geocoder_preference_provider_title">Geocoder Provider</string>
    <string name="geocoder_preference_provider_summary">Select a provider for use in geocoder</string>
    <string-array name="available_geocoder_providers">
        <item>MapQuest Nominatim</item>
        <item>Google Places</item>
    </string-array>
    <string name="marker_description">Description</string>
    <string name="marker_title">Title</string>
    <string name="marker_confirm">Confirm</string>
    <string name="marker_type">Type</string>
    <string name="marker_contributor">Contributor</string>
    <string name="marker_create">Create Accessibility Marker</string>
    <string name="access_markers">Access Markers</string>
    <string name="marker_delete">Delete</string>
    <string name="marker_list_title">Markers</string>
    <string name="marker_edit">Edit Accessibility Marker</string>
    <string name="error_title">Error</string>
    <string name="error_message">Error retrieving marker</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_delete">Delete</string>
    <string name="marker_latitude">Latitude</string>
    <string name="marker_longitude">Longitude</string>
    <string name="marker_menu_insert">Create Marker</string>
    <string name="no_markers_placed">No Markers Placed</string>
    <string-array name="marker_types">
        <item>Curb Ramp</item>
        <item >Stairs</item>
        <item>Uneven Pavement</item>
        <item>Pedestrian Crossing</item>
        <item>Sidewalk</item>
    </string-array>
</resources>
