<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	
	android:layout_height="fill_parent">

    <TextView
        android:id="@+id/marker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_create"
        android:textAppearance="?android:attr/textAppearanceMedium" 
    />
	
	<EditText android:id="@+id/title" 
		  android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/marker_title" 
			android:inputType="text"
	/>
	<requestFocus />

	

	<EditText
	    android:id="@+id/type"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/marker_type"
	    android:inputType="text"
	    android:ems="10" >

	    
	</EditText>


	<EditText
	    android:id="@+id/contributor"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/marker_contributor"
	    android:inputType="text"
	    android:ems="10" />
	
	<EditText
	    android:id="@+id/latitude"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/marker_latitude"
	    android:inputType="text"
	    android:ems="10" />
	
	<EditText
	    android:id="@+id/longitude"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/marker_longitude"
	    android:inputType="text"
	    android:ems="10" />

	<EditText
	    android:id="@+id/description"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:lines="5"
	    android:ems="10"
	    android:hint="@string/marker_description"
	    android:inputType="textMultiLine" />

	<Button
	    android:id="@+id/confirm"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/marker_confirm" />

</LinearLayout>